<resources>
    <string name="app_name">EDondtu_mobile alpha</string>
    <string name="login_app_name">DonDTU_mobile \n alpha</string>


    <string name="main_activity_menu">Меню</string>
    <string name="menu_item_schedule">Расписание</string>
    <string name="menu_item_events">События</string>
    <string name="menu_item_course">Курсы</string>
    <string name="profile">Профиль</string>


    <!--логин-->
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_remember_me">Запомнить меня</string>
    <string name="login_button">Войти</string>
    <string name="logout_button">Выйти</string>


    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="more">"Подробнее..."</string>
    <string name="go">Перейти</string>


    <!--переменные для странички профиля-->
    <string name="fio">"ФИО: "</string>
    <string name="city">"Место проживания: "</string>
    <string name="cathedra">"Кафедра: "</string>
    <string name="group">"Группа: "</string>
    <string name="post">"Должность: "</string>

    <!-- переменные для пре-курса -->
    <string name="precourse_see">Просмотр</string>
    <string name="precourse_tasks">Задания</string>
    <string name="precourse_materials">Материалы</string>
    <string name="precourse_members">Участники</string>
    <string name="precourse_events">События</string>
    <string name="precourse_extra">Дополнительная информация</string>



</resources>
