<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/navigation_menu_main"
        android:checkableBehavior="single">

        <!--расписание-->
        <item
            android:id="@+id/schedule"
            android:title="@string/menu_item_schedule"
            android:orderInCategory="1"
            android:icon="@mipmap/ic_format_list_numbers_grey600_24dp" />
        <!-- курсы -->
        <item
            android:id="@+id/navigation_menu_courses_btn"
            android:title="@string/menu_item_course"
            android:orderInCategory="2"
            android:icon="@mipmap/ic_format_list_bulleted_type_white_24dp" />
        <!-- профиль -->
        <item
            android:id="@+id/navigation_menu_profile_btn"
            android:title="@string/profile"
            android:orderInCategory="3"
            android:icon="@android:drawable/ic_menu_compass" />

    </group>


    <group android:id="@+id/navigation_menu_logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_menu_logout_btn"
            android:title="@string/logout_button"
            android:orderInCategory="4"
            android:icon="@android:drawable/ic_lock_power_off" />
    </group>


</menu>